data/derived/fa15/progs/unify/prog1295.ml.out
Characters 107-133:
  | Sine e -> Printf.printf "sin(pi*%s)" 
              ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string -> unit
       but an expression was expected of type unit
